@@ -330,6 +330,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/pulsemanager.cpp: insert PULSE_SERVER and PULSE_COOKIE variables
       into environment as used by PulseManager. Otherwise we won't be able to
       start binaries like paplay.
+    - src/pulsemanager.cpp: don't remove PA config and log file in
+      ~/.x2go/pulse on PA shutdown if debugging has been requested.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
